MC-3847: Issues With Same Width Buttons In Tabs
- Leverage a more generic event to remove coupling between Buttons and Tabs
- Add documentation for this new event
- Use a more consistent transition animation duration used by other components
- Debounce button resize events so it's not called more than it needs to be
- Add redraw event to storefront so Buttons know when you recalculate button size
- Add test to cover the functionality works on the frontend

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/button-item/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/button-item/_default.less
@@ -30,7 +30,7 @@
             max-width: 100%;
             min-width: 0;
             position: relative;
-            transition: min-width .3s ease;
+            transition: min-width 200ms ease;
             word-wrap: break-word;
             [data-element='link_text'] {
                 max-width: 100%;
